--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,31 @@
-body {
-    margin: 50px 0 0 0;
-    padding: 0;
-    width: 100%;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-align: center;
-    color: #aaa;
-    font-size: 18px;
-}
-
-h1 {
-    color: #719e40;
-    letter-spacing: -3px;
-    font-family: 'Lato', sans-serif;
-    font-size: 100px;
-    font-weight: 200;
-    margin-bottom: 0;
-}
+<style>
+    body {
+    background-color: #edeff0;
+    padding-top: 20px;
+    }
+    .container {
+        margin-top: 10px;
+    }
+    h1,
+    h3 {
+        margin-top: 0px;
+    }
+    .corners {
+        border-radius: 2px;
+        background-color: #F5F5F5;
+        border-bottom: 1px solid #DCDCDC;
+        border-right: 1px solid #DCDCDC;
+        margin-bottom: 5px;
+        padding-bottom: 5px;
+        -webkit-font-smoothing: antialiased;
+    }
+    .comments {
+        border-left: none;
+        background-color: #FFFBE8;
+        border-bottom: 1px solid #C7C7C7;
+        border-right: 1px solid #C7C7C7;
+        margin-bottom: 5px;
+        padding-bottom: 5px;
+        -webkit-font-smoothing: antialiased;
+    }
+</style>
