removed static function in user

--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -8,8 +8,8 @@
 	</div>
 
 	<div class="col-sm-12 comments corners">
-  		{% if querys %}
-  			{{ querys }}
+  		{% if query %}
+  			{{ query.rubrik }}
 		{% endif %}
 
 		<b>This is a TwigExtension test: {{ diffForHumans("2016-05-31 16:07:46") }}</b>
